@@ -3,8 +3,10 @@ partman-auto (73) UNRELEASED; urgency=low
   * Moved definitions.sh to ./lib/base.sh. Requires partman-base (>= 114).
   * Move recipes.sh and auto-shared.sh to ./lib/.
   * Moved lvm_tools.sh to ./lib/lvm-base.sh. Requires partman-lvm (>= 57).
+  * auto-shared.sh: some changes due to reorganization of partition label
+    related code to partman-partitioning.
 
- -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 15:41:19 +0100
+ -- Frans Pop <fjp@debian.org>  Wed, 05 Dec 2007 18:48:47 +0100
 
 partman-auto (72) unstable; urgency=low
 
